feat: Add custom MCP server integration with environment configuration
- Add langchain-mcp-adapters dependency for MultiServerMCPClient support
- Create custom_mcp.py utility for loading tools from CUSTOM_MCP_URL
- Integrate custom MCP tools alongside existing configurable MCP functionality
- Environment-driven configuration allows URL updates without code changes
- All custom MCP tools are always available regardless of user configuration

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,6 @@ ANTHROPIC_API_KEY=""
 SUPABASE_URL=""
 # Ensure this is your Supabase Service Role key
 SUPABASE_KEY=""
+
+# Custom MCP Server URL (always loaded if set)
+CUSTOM_MCP_URL=""
