--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "pydantic==2.11.3",
     "langchain>=0.3.27",
     "mcp>=1.9.1",
+    "langchain-mcp-adapters",
     "supabase>=2.15.1",
     "aiohttp>=3.8.0",
 ]
